syntax = "proto3";

import "google/protobuf/empty.proto";

service GrpcAccountsAndBalances {
  // All unary RPCs.
  rpc CreateAccounts(GrpcAccountArray) returns (GrpcIdArray);
  rpc CreateJournalEntries(GrpcJournalEntryArray) returns (GrpcIdArray);

  rpc GetAccountsByIds(GrpcIdArray) returns (GrpcAccountArray);
  rpc GetAccountsByOwnerId(GrpcId) returns (GrpcAccountArray);
  rpc GetJournalEntriesByAccountId(GrpcId) returns (GrpcJournalEntryArray);

  rpc DeleteAccountsByIds(GrpcIdArray) returns (google.protobuf.Empty);
  rpc DeactivateAccountsByIds(GrpcIdArray) returns (google.protobuf.Empty);
  rpc ActivateAccountsByIds(GrpcIdArray) returns (google.protobuf.Empty);
}

/* Ids */
// Used to send queries
message GrpcId {
  string grpcId = 1;
}

message GrpcIdArray {
  repeated GrpcId grpcIdArray = 1;
}

/* Account. */

message GrpcAccount {
  string id = 1;
  string ownerId = 2;
  string state = 3;
  string type = 4;
  string currencyCode = 5;
  string postedDebitBalance = 6;
  string pendingDebitBalance = 7;
  string postedCreditBalance = 8;
  string pendingCreditBalance = 9;
  string balance = 10;
  uint64 timestampLastJournalEntry = 11;
}

message GrpcAccountArray {
  repeated GrpcAccount grpcAccountArray = 1;
}

/* Journal entry. */

message GrpcJournalEntry {
  string id = 1;
  string ownerId = 2;
  string currencyCode = 3;
  string amount = 4;
  bool pending = 5;
  string debitedAccountId = 6;
  string creditedAccountId = 7;
  uint64 timestamp = 8;
}

message GrpcJournalEntryArray {
  repeated GrpcJournalEntry grpcJournalEntryArray = 1;
}
